
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "fly_sip_js"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"
ureq = "3.1.2"
zip = "=5.1.1"

[profile.release]
lto = true
strip = "symbols"
